# 34c3ctf-sols

./: .gitignore
SES/: flag.enc  ses.py  solve.py
babyvm/: README.md  VBoxControl  VBoxControl-5.2.4.patch
elgoog/: README.md
fuckbox/: .gitignore  README.md  aes_py.py  cache.json  crack.py  fault.html  index.html  jsfuck.py  payload.js  payload2.js  payload3.js  payload4.js  payload4_vars.js  payload5.js  phoenixAES.py  reverse.py  solve1.py  solve2.py
grumpy/: .gitignore  README.md  dump_games.py  eval_game.py  extract_gdb.py  ezgdb.py  patch.py  patched  solve.py  util.py
grumpy/source/: build.sh  games.json  grumpy.cabal  make.py
grumpy/source/src/: Main.hs  games.h
lol+rofl/: flag-rofl.txt.enc  solve.py  solve.sh  stream.cpp
pwndb/: README.md
readme_revenge/: solve.py
superblog/: payload2.html  stage1.py  stage2.py
superblog/source/: Dockerfile  build_docker.sh  dump.sql  flag1  flag2  run_docker.sh
superblog/source/app/blog/: middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
superblog/source/app/blog/migrations/: 0001_initial.py  0002_auto_20171001_1336.py  0003_feedback_visited.py
superblog/source/app/blog/static/css/: style.css
superblog/source/app/blog/static/js/: flag.js
superblog/source/app/blog/templates/blog/: base.html  contact.html  flag1.html  flag2.html  index.html  login.html  post.html  postform.html  signup.html
superblog/source/nginx/: default
superblog/source/scripts/: bot.py  chrome.py  login.py
