name:                grumpy
version:             0.1.33.7
license:             BSD3
license-file:        LICENSE
author:              niklasb
maintainer:          niklasb
category:            Fun
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable grumpy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable test
  hs-source-dirs:      src
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
